代码审查改进：使用toList()替代collect(Collectors.toList())
Co-authored-by: unknowIfGuestInDream <57802425+unknowIfGuestInDream@users.noreply.github.com>